navbar and about me change

--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,10 @@ body{
 .banner-column{
      background-color: darkseagreen
 }
+
+.navbar-container{
+    background-color: darkred;
+}
+.about-container{
+    background-color: darkseagreen;
+}
